--- a/zcblog-front2client/public/index.html
+++ b/zcblog-front2client/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>欢迎来到我的博客 | zcBlog.cc</title>
+    <title></title>
   </head>
   <body>
     <noscript>
